[fix] fix grammar error in tutorial01

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -203,9 +203,9 @@
     "\n",
     "    # Add a render job to renderer\n",
     "    # In render job, you can specify the output path, resolution, render passes, etc.\n",
-    "    # The output path is the path to save the rendered data.\n",
-    "    # The resolution is the resolution of the rendered image.\n",
-    "    # The render passes define what kind of data you want to render, such as img, mask, normal, etc.\n",
+    "    # The ``output_path`` is the path to save the rendered data.\n",
+    "    # The ``resolution`` is the resolution of the rendered image.\n",
+    "    # The ``render_passes`` define what kind of data you want to render, such as img, mask, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
     "    seq.add_to_renderer(\n",
     "        output_path=f'./tutorial01/outputs/{render_engine}/',\n",
@@ -326,7 +326,7 @@
     "- Add a `Camera`\n",
     "- Render\n",
     "\n",
-    "It is worth mention that while ``Sequence`` do not directly perform rendering, the creation of ``Sequence`` is necessary for adding cameras and submitting rendering jobs. And the detailed definitions of the classes [Actor](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [Camera](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [Sequence](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
+    "It is worth mention that while ``Sequence`` does not directly perform rendering, the creation of ``Sequence`` is necessary for adding cameras and submitting rendering jobs. And the detailed definitions of the classes [Actor](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [Camera](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [Sequence](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
    ]
   }
  ],
