--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place ``Actor`` is called ``Level``. You can add, remove, or modify ``Actor`` in the `Level`.\n",
+    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place ``Actor`` is called ``Level``, and you can add, remove, or modify ``Actor`` in the `Level`.\n",
     "\n",
     "- Blender\n",
     "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
