--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -67,6 +67,7 @@
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also use your own project\n",
     "    import shutil\n",
+    "\n",
     "    from xrfeitoria.utils.downloader import download\n",
     "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
     "                                    dst_dir=\"./tutorial03/assets/\")\n",
@@ -93,7 +94,7 @@
    "source": [
     "## 2. Import skeletal meshes to Level\n",
     "\n",
-    "Download the skeletal meshes in [SynBody](https://synbody.github.io/SynBody/) to local folder and import them to ``Level``."
+    "Download the skeletal meshes in [SynBody](https://synbody.github.io) to local folder and import them to ``Level``."
    ]
   },
   {
@@ -217,9 +218,9 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "\n",
     "from xrfeitoria.data_structure.models import RenderPass\n",
     "from xrfeitoria.data_structure.models import SequenceTransformKey as SeqTransKey\n",
-    "\n",
     "\n",
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
@@ -331,6 +332,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
     "\n",
     "xf_viewer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
@@ -365,6 +367,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
     "\n",
     "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
