- add download button - rename `reader` to `viewer`

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -9,6 +9,7 @@
     "## Overview\n",
     "\n",
     "🚀 This tutorial demonstrates a minimal application of XRFeitoria. By the end of this tutorial, you will be able to:\n",
+    "\n",
     "- Open Blender/Unreal Engine by XRFeitoria\n",
     "- Import a mesh\n",
     "- Add a camera\n",
@@ -21,7 +22,7 @@
    "source": [
     "## 1. Import XRFeitoria\n",
     "\n",
-    "After [Installing](https://xrfeitoria.readthedocs.io/en/latest/#installation), import ``XRfeitoria`` by"
+    "After installing ``pip install xrfeitoria[vis]``, you can import it as follows:"
    ]
   },
   {
@@ -117,7 +118,8 @@
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
     "# Download the Koupen-chan model\n",
-    "kc_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
+    "kc_path = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/koupen_chan.fbx', \n",
+    "                   dst_dir=\"./tutorial01/assets/\")"
    ]
   },
   {
@@ -143,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place ``Actor`` is called ``Level``, and you can add, remove, or modify ``Actor`` in the `Level`.\n",
+    "Switch to the engine window, and you can see the Koupen chan has been *imported*. The space to place ``Actor`` is called ``Level``, and you can *add*, *remove*, or *modify* ``Actor`` in the `Level`.\n",
     "\n",
     "- Blender\n",
     "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
@@ -177,6 +179,7 @@
     "## 4. Add a sequence\n",
     "\n",
     "``Sequence`` is a multifunctional class in XRFeitoria. It can be used for:\n",
+    "\n",
     "- rendering\n",
     "- adding transform keys\n",
     "- grouping different objects\n",
@@ -251,13 +254,13 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "from xrfeitoria.utils.viewer import Viewer\n",
     "\n",
-    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial01/outputs/{render_engine}/{sequence_name}/')\n",
-    "img = xf_viwer.get_img(camera_name=camera.name, frame=0)\n",
-    "diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=0)\n",
-    "mask = xf_viwer.get_mask(camera_name=camera.name, frame=0)\n",
-    "normal = xf_viwer.get_normal(camera_name=camera.name, frame=0)\n",
+    "xf_viewer = Viewer(sequence_dir=f'./tutorial01/outputs/{render_engine}/{sequence_name}/')\n",
+    "img = xf_viewer.get_img(camera_name=camera.name, frame=0)\n",
+    "diffuse = xf_viewer.get_diffuse(camera_name=camera.name, frame=0)\n",
+    "mask = xf_viewer.get_mask(camera_name=camera.name, frame=0)\n",
+    "normal = xf_viewer.get_normal(camera_name=camera.name, frame=0)\n",
     "\n",
     "plt.figure(figsize=(20, 20))\n",
     "\n",
