--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -9,9 +9,10 @@
     "## Overview\n",
     "\n",
     "🚀 By the last tutorial, you have learned the concept of ``Actor``, ``Level`` and ``Sequence``. In this tutorial, you will learn how to add random transform keys to an ``Actor`` in order to render multiple poses of it. By the end of this tutorial, you will be able to:\n",
+    "\n",
     "- Initialize XRFeitoria\n",
     "- Import ``Actor`` and label it by ``stencil value``\n",
-    "- Set ``Actor``'s scale in the ``Level``\n",
+    "- Set the scale of ``Actor`` in the ``Level``\n",
     "- Create a `Sequence` for rendering and adding transform keys to `Actor`\n",
     "- Add a camera in the `Sequence`\n",
     "- Render images and annotations"
@@ -40,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
+    "Then, similar to [Tutorial01](./01_get_started.ipynb), specify your engine path and initialize XRFeitoria."
    ]
   },
   {
@@ -80,6 +81,7 @@
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also use your own project\n",
     "    import shutil\n",
+    "\n",
     "    from xrfeitoria.utils.downloader import download\n",
     "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
     "                                    dst_dir=\"./tutorial02/assets/\")\n",
@@ -115,8 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import objaverse\n",
+    "\n",
     "objects = objaverse.load_objects(\n",
     "    uids=['eb0807309530496aaab9dcff67bf5c31',\n",
     "          'b4065dd5ce9d46be90db3e1f3e4b9cc1',\n",
@@ -146,7 +148,10 @@
    "source": [
     "actors = []\n",
     "for idx, file_path in enumerate(objects.values()):\n",
-    "    actor = xf_runner.Actor.import_from_file(file_path=file_path, stencil_value=(idx+1)*10)\n",
+    "    actor = xf_runner.Actor.import_from_file(\n",
+    "        file_path=file_path, \n",
+    "        stencil_value=(idx+1)*10\n",
+    "    )\n",
     "    actors.append(actor)"
    ]
   },
@@ -167,8 +172,8 @@
    "source": [
     "actor_size = 0.3\n",
     "for actor in actors:\n",
-    "    actor.scale = (1, 1, 1)\n",
-    "    actor.scale = (actor_size / max(actor.dimensions), ) * 3"
+    "    _scale = actor_size / max(actor.dimensions)\n",
+    "    actor.scale = (_scale, _scale, _scale)"
    ]
   },
   {
@@ -220,8 +225,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">``Transform keys`` record the transformation (location, rotation and scale) of an ``Actor`` or a ``Camera`` at specific frames, and the transformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
-    ">In ``XRFeitoria``, transform keys are always stored in a list, and the members of the list are [``SequenceTransformKey``](https://xrfeitoria.readthedocs.io/en/latest/apis/generated/xrfeitoria.data_structure.models.SequenceTransformKey.html) object.\n",
+    "> ``Transform keys`` record the transformation (location, rotation and scale) of an ``Actor`` or a ``Camera`` at specific frames, and the transformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
+    "> \n",
+    "> In ``XRFeitoria``, transform keys are always stored in a list, and the members of the list are [SequenceTransformKey](https://xrfeitoria.readthedocs.io/en/latest/apis/generated/xrfeitoria.data_structure.models.SequenceTransformKey.html) object.\n",
     "\n",
     "Firstly, we randomly generate some transform keys for each actors."
    ]
@@ -233,8 +239,10 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
     "from loguru import logger\n",
     "from scipy.stats import qmc\n",
+    "\n",
     "from xrfeitoria.data_structure.models import SequenceTransformKey as SeqTransKey\n",
     "\n",
     "# Set the number of frames\n",
@@ -371,15 +379,16 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
     "\n",
-    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial02/outputs/{render_engine}/{sequence_name}/')\n",
+    "from xrfeitoria.utils.viewer import Viewer\n",
+    "\n",
+    "xf_viewer = Viewer(sequence_dir=f'./tutorial02/outputs/{render_engine}/{sequence_name}/')\n",
     "\n",
     "for i in range(frame_num):\n",
-    "    img = xf_viwer.get_img(camera_name=camera.name, frame=i)\n",
-    "    mask = xf_viwer.get_mask(camera_name=camera.name, frame=i)\n",
-    "    normal = xf_viwer.get_normal(camera_name=camera.name, frame=i)\n",
-    "    diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=i)\n",
+    "    img = xf_viewer.get_img(camera_name=camera.name, frame=i)\n",
+    "    mask = xf_viewer.get_mask(camera_name=camera.name, frame=i)\n",
+    "    normal = xf_viewer.get_normal(camera_name=camera.name, frame=i)\n",
+    "    diffuse = xf_viewer.get_diffuse(camera_name=camera.name, frame=i)\n",
     "\n",
     "    plt.figure(figsize=(20, 20))\n",
     "\n",
