--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -9,6 +9,7 @@
     "## Overview\n",
     "\n",
     "🚀 This tutorial provides an example of rendering animated skeletal meshes from different points of view. The rendered images can support various research topics, including human pose and shape estimation (HPS) and novel view synthesis for human (Human NeRF). By the end of this tutorial, you will be able to:\n",
+    "\n",
     "- Initialize XRFeitoria\n",
     "- Import a skeletal mesh with animation\n",
     "- Import another skeletal mesh without animation and setup animation for it\n",
@@ -25,7 +26,7 @@
    "source": [
     "## 1. Initialization\n",
     "\n",
-    "Similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
+    "Then, similar to [Tutorial01](./01_get_started.ipynb), specify your engine path and initialize XRFeitoria."
    ]
   },
   {
@@ -333,9 +334,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "from xrfeitoria.utils.viewer import Viewer\n",
     "\n",
-    "xf_viewer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
+    "xf_viewer = Viewer(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
     "\n",
     "moving_camera_img = xf_viewer.get_img(camera_name='moving_camera', frame=2)\n",
     "static_camera_img = xf_viewer.get_img(camera_name='static_camera_2', frame=2)\n",
@@ -368,16 +369,16 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "from xrfeitoria.utils.viewer import Viewer\n",
     "\n",
-    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
+    "xf_viewer = Viewer(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
     "\n",
     "camera_name = 'static_camera_2'\n",
     "for i in range(frame_num):\n",
-    "    img = xf_viwer.get_img(camera_name=camera_name, frame=i)\n",
-    "    mask = xf_viwer.get_mask(camera_name=camera_name, frame=i)\n",
-    "    normal = xf_viwer.get_normal(camera_name=camera_name, frame=i)\n",
-    "    diffuse = xf_viwer.get_diffuse(camera_name=camera_name, frame=i)\n",
+    "    img = xf_viewer.get_img(camera_name=camera_name, frame=i)\n",
+    "    mask = xf_viewer.get_mask(camera_name=camera_name, frame=i)\n",
+    "    normal = xf_viewer.get_normal(camera_name=camera_name, frame=i)\n",
+    "    diffuse = xf_viewer.get_diffuse(camera_name=camera_name, frame=i)\n",
     "\n",
     "    plt.figure(figsize=(20, 20))\n",
     "\n",
