--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -52,7 +52,8 @@
             "outputs": [],
             "source": [
                 "# Replace with your executable path\n",
-                "engine_exec_path = 'C:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
+                "engine_exec_path = 'C:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+                "# engine_exec_path = 'C:/Program Files/Epic Games/UE_5.2/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
             ]
         },
         {
