feat: Update asset URLs and images in documentation and samples

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -76,7 +76,7 @@
                 "    import shutil\n",
                 "\n",
                 "    from xrfeitoria.utils.downloader import download\n",
-                "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
+                "    unreal_project_zip = download(url='https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/UE--XRFeitoriaUnreal_Sample.zip', \n",
                 "                                    dst_dir=\"./tutorial01/assets/\")\n",
                 "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial01/assets/')\n",
                 "\n",
@@ -95,10 +95,10 @@
                 "✨ Now you can see a new Blender/Unreal Engine process has been started.\n",
                 "\n",
                 "- Blender\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/open_blender.png)\n",
+                "![](https://github.com/user-attachments/assets/e02ea52f-658f-4031-8439-2d5c3ade70ae)\n",
                 "\n",
                 "- Unreal Engine\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/unreal/open_unreal.png)"
+                "![](https://github.com/user-attachments/assets/d93fee50-7117-4503-b901-40c154fd1e7e)"
             ]
         },
         {
@@ -119,7 +119,7 @@
                 "from xrfeitoria.utils.downloader import download\n",
                 "\n",
                 "# Download the Koupen-chan model\n",
-                "kc_path = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/koupen_chan.fbx', \n",
+                "kc_path = download(url='https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/assets--koupen_chan.fbx', \n",
                 "                   dst_dir=\"./tutorial01/assets/\")"
             ]
         },
@@ -149,10 +149,10 @@
                 "Switch to the engine window, and you can see the Koupen chan has been *imported*. The space to place ``Actor`` is called ``Level``, and you can *add*, *remove*, or *modify* ``Actor`` in the `Level`.\n",
                 "\n",
                 "- Blender\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
+                "![](https://github.com/user-attachments/assets/f38220c6-6f72-4d54-a304-9b91e0739aa5)\n",
                 "\n",
                 "- Unreal Engine\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/unreal/import_kc.png)"
+                "![](https://github.com/user-attachments/assets/8dbcfd99-8fb0-41da-a4ff-3f7aa101375b)"
             ]
         },
         {
