--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -71,7 +71,7 @@
                 "    import shutil\n",
                 "\n",
                 "    from xrfeitoria.utils.downloader import download\n",
-                "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
+                "    unreal_project_zip = download(url='https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/UE--XRFeitoriaUnreal_Sample.zip', \n",
                 "                                    dst_dir=\"./tutorial03/assets/\")\n",
                 "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial03/assets/')\n",
                 "\n",
@@ -108,9 +108,9 @@
                 "from xrfeitoria.utils.downloader import download\n",
                 "\n",
                 "# Download the skeletal meshes\n",
-                "actor1_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/SMPL-XL-00439__Subject_75_F_12.fbx', dst_dir=\"./tutorial03/assets/\")\n",
-                "actor2_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/SMPL-XL-00045.fbx', dst_dir=\"./tutorial03/assets/\")\n",
-                "actor2_motion_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/walking__15_01.fbx', dst_dir=\"./tutorial03/assets/\")"
+                "actor1_path = download('https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/assets--SMPL-XL--SMPL-XL-00439Subject_75_F_12.fbx', dst_dir=\"./tutorial03/assets/\")\n",
+                "actor2_path = download('https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/assets--SMPL-XL--SMPL-XL-00045.fbx', dst_dir=\"./tutorial03/assets/\")\n",
+                "actor2_motion_path = download('https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/assets--SMPL-XL--walking15_01.fbx', dst_dir=\"./tutorial03/assets/\")"
             ]
         },
         {
@@ -175,10 +175,10 @@
                 "Now they look like:\n",
                 "\n",
                 "- Blender\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/03/blender/two_actors.png)\n",
+                "![](https://github.com/user-attachments/assets/eba6c868-de56-478b-b36e-386d42f42e46)\n",
                 "\n",
                 "- Unreal Engine\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/03/unreal/two_actors.png)"
+                "![](https://github.com/user-attachments/assets/50f32714-de0d-4f1c-8eaf-00e965c37a77)"
             ]
         },
         {
