--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -84,7 +84,7 @@
                 "    import shutil\n",
                 "\n",
                 "    from xrfeitoria.utils.downloader import download\n",
-                "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
+                "    unreal_project_zip = download(url='https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/UE--XRFeitoriaUnreal_Sample.zip', \n",
                 "                                    dst_dir=\"./tutorial02/assets/\")\n",
                 "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
                 "\n",
@@ -184,10 +184,10 @@
                 "Now they look like:\n",
                 "\n",
                 "- Blender\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/blender/scale_the_actors.png)\n",
+                "![](https://github.com/user-attachments/assets/734b410f-beff-4bbf-91bb-c6bfd8358d3d)\n",
                 "\n",
                 "- Unreal Engine\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/unreal/scale_the_actors.png)"
+                "![](https://github.com/user-attachments/assets/ee4fbaff-0d07-4c92-835b-c4ee0e87f4d9)"
             ]
         },
         {
