refactor: Update sequence method calls for consistency across scripts
- Changed instances of `xf_runner.Sequence.new` to `xf_runner.sequence` in various Blender and Unreal render scripts, ensuring uniformity with the updated API.
- Updated related test and tutorial files to reflect the new method name, enhancing clarity and consistency in documentation.

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -198,7 +198,7 @@
                 "\n",
                 "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
                 "sequence_name = 'MySequence'\n",
-                "with xf_runner.Sequence.new(seq_name=sequence_name, replace=True) as seq:\n",
+                "with xf_runner.sequence(seq_name=sequence_name, replace=True) as seq:\n",
                 "\n",
                 "    # Add a camera and make it look at the koupen-chan\n",
                 "    camera_location = (0.0, -0.8, 0.0)\n",
