--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -311,7 +311,7 @@
                 "# Use the `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
                 "# The argument `seq_length` controls the number of frames to be rendered. \n",
                 "sequence_name = 'MySequence'\n",
-                "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
+                "with xf_runner.sequence(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
                 "    ##############################\n",
                 "    ##### Add transform keys #####\n",
                 "    ##############################\n",
