--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -228,7 +228,7 @@
                 "# The argument `seq_length` controls the number of frames to be rendered. \n",
                 "sequence_name = 'MySequence'\n",
                 "frame_num = 6\n",
-                "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
+                "with xf_runner.sequence(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
                 "\n",
                 "    # Get the bounding boxes of the actors\n",
                 "    actor1_bbox = actor1.bound_box\n",
