[Version] Bump version to v0.6.4 (#44)
* feat: Add support for setting accumulator alpha in custom movie pipeline

* fix: flow output `rgb` -> `rgba`
    - `ba` is forward
    - `rg` is backward

* feat: Enable transparent background rendering in `sequence`

* feat: Update HumanLiff teaser image URL

* add comment

* refactor: Change logging level from debug to trace in rendering job updates; enhance LoggerWrapper to support configurable log path level

* refactor: Change logging level from trace to debug in rendering job updates for improved log clarity

* feat: Add environment variable support for disabling spinner and logging interval in rendering processes

- Introduced `DISABLE_SPINNER` and `LOG_INTERVAL` environment variables to control spinner visibility and logging frequency during rendering.
- Updated `receive_stdout` and `render_jobs` methods to utilize these new configurations, enhancing user control over rendering output.
- Improved logging behavior to provide more informative output when the spinner is disabled.

* refactor: Update warning message related to `sequence_wrapper_blender`

- Changed method name from `xf_runner.Sequence.new` to `xf_runner.sequence` for consistency with the updated API.
- Introduced a new helper function `_get_caller_frame` in `sequence_wrapper.py` to improve warning messages by providing the actual caller's frame information.
- Updated warning handling in `SequenceWrapperBlender` to utilize the new caller frame information, enhancing the clarity of deprecation warnings.

* feat: Add PowerShell script to create and run CircleCI Runner Agent as a scheduled task

* feat: Update asset URLs and images in documentation and samples

* feat: Add SMPLest-X project to the README with corresponding image and link

* chore: Update CircleCI configuration to include timeout and error handling for Runner Info job

- Added a timeout of 1 minute to the "Check Runner Info" job.
- Set `fail_on_error` to false and configured the job to always r

--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -84,7 +84,7 @@
                 "    import shutil\n",
                 "\n",
                 "    from xrfeitoria.utils.downloader import download\n",
-                "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
+                "    unreal_project_zip = download(url='https://github.com/openxrlab/xrfeitoria/releases/download/v0.1.0/UE--XRFeitoriaUnreal_Sample.zip', \n",
                 "                                    dst_dir=\"./tutorial02/assets/\")\n",
                 "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
                 "\n",
@@ -184,10 +184,10 @@
                 "Now they look like:\n",
                 "\n",
                 "- Blender\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/blender/scale_the_actors.png)\n",
+                "![](https://github.com/user-attachments/assets/734b410f-beff-4bbf-91bb-c6bfd8358d3d)\n",
                 "\n",
                 "- Unreal Engine\n",
-                "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/unreal/scale_the_actors.png)"
+                "![](https://github.com/user-attachments/assets/ee4fbaff-0d07-4c92-835b-c4ee0e87f4d9)"
             ]
         },
         {
@@ -311,7 +311,7 @@
                 "# Use the `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
                 "# The argument `seq_length` controls the number of frames to be rendered. \n",
                 "sequence_name = 'MySequence'\n",
-                "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
+                "with xf_runner.sequence(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
                 "    ##############################\n",
                 "    ##### Add transform keys #####\n",
                 "    ##############################\n",
